syntax = "proto2";

package mentalpoker;

option java_package = "au.edu.unimelb.mentalpoker";
option java_outer_classname = "Proto";

message PeerAddress {
    optional string hostname = 1;
    optional int32 port = 2;
}

message GameStartedMessage {
    required int32 playerId = 1;
    repeated Player players = 2;
}

message Player {
    required int32 playerId = 1;
    required PeerAddress address = 2;
}

message JoinRoomMessage {
    required string playerName = 1;
}

message NetworkMessageHeader {
    required int32 messageId = 1;
    required bool ack = 2;
}

message NetworkPacket {
    required NetworkMessageHeader networkMessageHeader = 1;
    optional NetworkMessage networkMessage = 2;
}

message SraDeckMessage {
    repeated string card = 1;
}

message SraCardMessage {
    required string card = 1;
}

message SraSecretMessage {
    required string secret = 1;
}

message NetworkMessage {
    enum Type {
        JOIN_ROOM = 0;
        JOIN_ROOM_ALLOWED = 1;
        PLAYER_READY = 2;
        GAME_STARTED = 3;
        SYNC = 4;
        SYNC_ACK = 5;
        SRA_DECK = 6;
        SRA_CARD = 7;
        SRA_SECRET = 8;
    };

    required Type type = 1;

    optional JoinRoomMessage joinRoomMessage = 2;
    optional GameStartedMessage gameStartedMessage = 3;
    optional SraDeckMessage sraDeckMessage = 4;
    optional SraCardMessage sraCardMessage = 5;
    optional SraSecretMessage sraSecretMessage = 6;
}
